--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@oslojs/encoding": "^1.1.0",
 		"arctic": "^3.6.0",
 		"mongodb": "^6.15.0",
+		"quill": "2.0.3",
 		"stripe": "^18.0.0"
 	}
 }
